--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -67,6 +68,23 @@ body {
     position: fixed;
     background: white;
     z-index: -1;
+}
+
+a.category-badge > span.badge:hover {
+    background: #212529!important;
+    color: #fff!important;
+}
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
 }
 
 /*Media Queries*/
