--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -104,8 +104,9 @@
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
                         <div class="mb-3" id="card-element"></div>
-                        
+
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                        <input type="hidden" name="client_secret" value="{{ client_secret }}">
                     </fieldset>
 
                     <div class="submit-button text-right mt-5 mb-2">
