--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,5 @@
 html {
     height: 100%;
-    scroll-behavior: smooth;
 }
 
 body {
@@ -11,6 +10,7 @@ body {
     font-family: 'Lato';
 }
 
+/* from Bulma */
 .icon {
     align-items: center;
     display: inline-flex;
@@ -33,22 +33,22 @@ body {
     min-width: 260px;
 }
 
-.btn-black  {
+.btn-black {
     background: black;
     color: white;
 }
 
 .btn-outline-black {
     background: white;
-    color: black!important;
+    color: black !important; /* use important to override link colors for <a> elements */
     border: 1px solid black;
 }
 
 .btn-outline-black:hover,
-.btn-outline-black:focus,
-.btn-outline-black:active {
+.btn-outline-black:active,
+.btn-outline-black:focus {
     background: black;
-    color: white!important;
+    color: white !important;
 }
 
 .shop-now-button:hover,
@@ -62,30 +62,30 @@ body {
 }
 
 .text-black {
-    color: #000!important;
+    color: #000 !important;
 }
 
-.border-black   {
-    border: 1px solid black!important;
+.border-black {
+    border: 1px solid black !important;
 }
 
 .bg-black {
-    background: #000!important;
+    background: #000 !important;
 }
 
 .overlay {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: white;
-    z-index: -1;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
 }
 
 a.category-badge > span.badge:hover {
-    background: #212529!important;
-    color: #fff!important;
+    background: #212529 !important;
+    color: #fff !important;
 }
 
 .btt-button {
@@ -106,11 +106,13 @@ input[name='q']::placeholder {
     color: #aab7c4;
 }
 
+/* ------------------------------- bootstrap toasts */
+
 .message-container {
     position: fixed;
     top: 72px;
     right: 15px;
-    z-index: 99999999999999;
+    z-index: 99999999999;
 }
 
 .custom-toast {
@@ -121,6 +123,7 @@ input[name='q']::placeholder {
     height: 2px;
 }
 
+/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
     width: 0; 
     height: 0; 
@@ -132,6 +135,7 @@ input[name='q']::placeholder {
     right: 36px;
 }
 
+/* Convenience classes - colors copied from Bootstrap */
 .arrow-primary {
     border-bottom-color: #007bff !important;
 }
@@ -170,17 +174,20 @@ input[name='q']::placeholder {
     overflow-y: auto;
 }
 
-/*Media Queries*/
+/* -------------------------------- Media Queries */
 
+/* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
-    .container {
-        max-width: 80%;
-    }
+  .container {
+    max-width: 80%;
+  }
 }
 
+/* Allauth form formatting */
+
 .allauth-form-inner-content p {
-    margin-top: 1.5rem;
-    color: #6c757d;
+    margin-top: 1.5rem; /* mt-4 */
+    color: #6c757d; /* text-secondary */
 }
 
 .allauth-form-inner-content input {
@@ -230,6 +237,36 @@ input[name='q']::placeholder {
 	color: #17a2b8; /* text-info */
 }
 
+/* Product Form */
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    border-radius: 0;
+}
+
+
+/* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
         position: fixed;
@@ -244,6 +281,7 @@ input[name='q']::placeholder {
     }
 }
 
+/* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
